parser.output
Grammar

    0 $accept: program "end file"

    1 program: globals

    2 globals: globals decl
    3        | %empty

    4 decl: varDecl SEMICOLON
    5     | fnDecl

    6 varDecl: id COLON type

    7 type: INT
    8     | INT ARRAY LBRACE INTLITERAL RBRACE
    9     | BOOL
   10     | BOOL ARRAY LBRACE INTLITERAL RBRACE
   11     | BYTE
   12     | BYTE ARRAY LBRACE INTLITERAL RBRACE
   13     | STRING
   14     | VOID

   15 fnDecl: id COLON type formals fnBody

   16 formals: LPAREN RPAREN
   17        | LPAREN formalsList RPAREN

   18 formalsList: formalDecl
   19            | formalDecl COMMA formalsList

   20 formalDecl: id COLON type

   21 fnBody: LCURLY stmtList RCURLY

   22 stmtList: stmtList stmt
   23         | %empty

   24 stmt: varDecl SEMICOLON
   25     | assignExp SEMICOLON
   26     | lval DASHDASH SEMICOLON
   27     | lval CROSSCROSS SEMICOLON
   28     | READ lval SEMICOLON
   29     | WRITE exp SEMICOLON
   30     | IF LPAREN exp RPAREN LCURLY stmtList RCURLY
   31     | IF LPAREN exp RPAREN LCURLY stmtList RCURLY ELSE LCURLY stmtList RCURLY
   32     | WHILE LPAREN exp RPAREN LCURLY stmtList RCURLY
   33     | RETURN exp SEMICOLON
   34     | RETURN SEMICOLON
   35     | fncall SEMICOLON
   36     | fnDecl

   37 assignExp: lval ASSIGN exp

   38 fncall: id LPAREN RPAREN
   39       | id LPAREN actualList RPAREN

   40 actualList: exp
   41           | actualList COMMA exp

   42 exp: assignExp
   43    | exp DASH exp
   44    | exp CROSS exp
   45    | exp STAR exp
   46    | exp SLASH exp
   47    | exp AND exp
   48    | exp OR exp
   49    | exp EQUALS exp
   50    | exp NOTEQUALS exp
   51    | exp GREATER exp
   52    | exp GREATEREQ exp
   53    | exp LESS exp
   54    | exp LESSEQ exp
   55    | NOT exp
   56    | DASH term
   57    | term

   58 term: lval
   59     | INTLITERAL
   60     | STRLITERAL
   61     | TRUE
   62     | FALSE
   63     | HAVOC
   64     | LPAREN exp RPAREN
   65     | fncall

   66 lval: id
   67     | id LBRACE exp RBRACE

   68 id: ID


Terminals, with rules where they appear

    "end file" (0) 0
    error (256)
    AND <transToken> (258) 47
    ARRAY <transToken> (259) 8 10 12
    ASSIGN <transToken> (260) 37
    BOOL <transToken> (261) 9 10
    BYTE <transToken> (262) 11 12
    COLON <transToken> (263) 6 15 20
    COMMA <transToken> (264) 19 41
    CROSS <transToken> (265) 44
    CROSSCROSS <transToken> (266) 27
    DASH <transToken> (267) 43 56
    DASHDASH <transToken> (268) 26
    ELSE <transToken> (269) 31
    EQUALS <transToken> (270) 49
    FALSE <transToken> (271) 62
    READ <transToken> (272) 28
    HAVOC <transToken> (273) 63
    ID <transIDToken> (274) 68
    IF <transToken> (275) 30 31
    INT <transToken> (276) 7 8
    INTLITERAL <transIntToken> (277) 8 10 12 59
    GREATER <transToken> (278) 51
    GREATEREQ <transToken> (279) 52
    LBRACE <transToken> (280) 8 10 12 67
    LCURLY <transToken> (281) 21 30 31 32
    LESS <transToken> (282) 53
    LESSEQ <transToken> (283) 54
    LPAREN <transToken> (284) 16 17 30 31 32 38 39 64
    NOT <transToken> (285) 55
    NOTEQUALS <transToken> (286) 50
    OR <transToken> (287) 48
    RBRACE <transToken> (288) 8 10 12 67
    RCURLY <transToken> (289) 21 30 31 32
    RETURN <transToken> (290) 33 34
    RPAREN <transToken> (291) 16 17 30 31 32 38 39 64
    SEMICOLON <transToken> (292) 4 24 25 26 27 28 29 33 34 35
    SLASH <transToken> (293) 46
    STRING <transToken> (294) 13
    STAR <transToken> (295) 45
    STRLITERAL <transStrToken> (296) 60
    TRUE <transToken> (297) 61
    VOID <transToken> (298) 14
    WHILE <transToken> (299) 32
    WRITE <transToken> (300) 29


Nonterminals, with rules where they appear

    $accept (46)
        on left: 0
    program <transProgram> (47)
        on left: 1
        on right: 0
    globals <transDeclList> (48)
        on left: 2 3
        on right: 1 2
    decl <transDecl> (49)
        on left: 4 5
        on right: 2
    varDecl <transVarDecl> (50)
        on left: 6
        on right: 4 24
    type <transType> (51)
        on left: 7 8 9 10 11 12 13 14
        on right: 6 15 20
    fnDecl <transFnDecl> (52)
        on left: 15
        on right: 5 36
    formals <transFormalsList> (53)
        on left: 16 17
        on right: 15
    formalsList <transFormalsList> (54)
        on left: 18 19
        on right: 17 19
    formalDecl <transFormalDecl> (55)
        on left: 20
        on right: 18 19
    fnBody <transStmtList> (56)
        on left: 21
        on right: 15
    stmtList <transStmtList> (57)
        on left: 22 23
        on right: 21 22 30 31 32
    stmt <transStmt> (58)
        on left: 24 25 26 27 28 29 30 31 32 33 34 35 36
        on right: 22
    assignExp <transAssignExp> (59)
        on left: 37
        on right: 25 42
    fncall <transFncall> (60)
        on left: 38 39
        on right: 35 65
    actualList <transActualList> (61)
        on left: 40 41
        on right: 39 41
    exp <transExp> (62)
        on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57
        on right: 29 30 31 32 33 37 40 41 43 44 45 46 47 48 49 50 51 52 53 54 55 64 67
    term <transExp> (63)
        on left: 58 59 60 61 62 63 64 65
        on right: 56 57
    lval <transLVal> (64)
        on left: 66 67
        on right: 26 27 28 37 58
    id <transID> (65)
        on left: 68
        on right: 6 15 20 38 39 66 67


State 0

    0 $accept: • program "end file"

    $default  reduce using rule 3 (globals)

    program  go to state 1
    globals  go to state 2


State 1

    0 $accept: program • "end file"

    "end file"  shift, and go to state 3


State 2

    1 program: globals •
    2 globals: globals • decl

    ID  shift, and go to state 4

    $default  reduce using rule 1 (program)

    decl     go to state 5
    varDecl  go to state 6
    fnDecl   go to state 7
    id       go to state 8


State 3

    0 $accept: program "end file" •

    $default  accept


State 4

   68 id: ID •

    $default  reduce using rule 68 (id)


State 5

    2 globals: globals decl •

    $default  reduce using rule 2 (globals)


State 6

    4 decl: varDecl • SEMICOLON

    SEMICOLON  shift, and go to state 9


State 7

    5 decl: fnDecl •

    $default  reduce using rule 5 (decl)


State 8

    6 varDecl: id • COLON type
   15 fnDecl: id • COLON type formals fnBody

    COLON  shift, and go to state 10


State 9

    4 decl: varDecl SEMICOLON •

    $default  reduce using rule 4 (decl)


State 10

    6 varDecl: id COLON • type
   15 fnDecl: id COLON • type formals fnBody

    BOOL    shift, and go to state 11
    BYTE    shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14
    VOID    shift, and go to state 15

    type  go to state 16


State 11

    9 type: BOOL •
   10     | BOOL • ARRAY LBRACE INTLITERAL RBRACE

    ARRAY  shift, and go to state 17

    $default  reduce using rule 9 (type)


State 12

   11 type: BYTE •
   12     | BYTE • ARRAY LBRACE INTLITERAL RBRACE

    ARRAY  shift, and go to state 18

    $default  reduce using rule 11 (type)


State 13

    7 type: INT •
    8     | INT • ARRAY LBRACE INTLITERAL RBRACE

    ARRAY  shift, and go to state 19

    $default  reduce using rule 7 (type)


State 14

   13 type: STRING •

    $default  reduce using rule 13 (type)


State 15

   14 type: VOID •

    $default  reduce using rule 14 (type)


State 16

    6 varDecl: id COLON type •
   15 fnDecl: id COLON type • formals fnBody

    LPAREN  shift, and go to state 20

    $default  reduce using rule 6 (varDecl)

    formals  go to state 21


State 17

   10 type: BOOL ARRAY • LBRACE INTLITERAL RBRACE

    LBRACE  shift, and go to state 22


State 18

   12 type: BYTE ARRAY • LBRACE INTLITERAL RBRACE

    LBRACE  shift, and go to state 23


State 19

    8 type: INT ARRAY • LBRACE INTLITERAL RBRACE

    LBRACE  shift, and go to state 24


State 20

   16 formals: LPAREN • RPAREN
   17        | LPAREN • formalsList RPAREN

    ID      shift, and go to state 4
    RPAREN  shift, and go to state 25

    formalsList  go to state 26
    formalDecl   go to state 27
    id           go to state 28


State 21

   15 fnDecl: id COLON type formals • fnBody

    LCURLY  shift, and go to state 29

    fnBody  go to state 30


State 22

   10 type: BOOL ARRAY LBRACE • INTLITERAL RBRACE

    INTLITERAL  shift, and go to state 31


State 23

   12 type: BYTE ARRAY LBRACE • INTLITERAL RBRACE

    INTLITERAL  shift, and go to state 32


State 24

    8 type: INT ARRAY LBRACE • INTLITERAL RBRACE

    INTLITERAL  shift, and go to state 33


State 25

   16 formals: LPAREN RPAREN •

    $default  reduce using rule 16 (formals)


State 26

   17 formals: LPAREN formalsList • RPAREN

    RPAREN  shift, and go to state 34


State 27

   18 formalsList: formalDecl •
   19            | formalDecl • COMMA formalsList

    COMMA  shift, and go to state 35

    $default  reduce using rule 18 (formalsList)


State 28

   20 formalDecl: id • COLON type

    COLON  shift, and go to state 36


State 29

   21 fnBody: LCURLY • stmtList RCURLY

    $default  reduce using rule 23 (stmtList)

    stmtList  go to state 37


State 30

   15 fnDecl: id COLON type formals fnBody •

    $default  reduce using rule 15 (fnDecl)


State 31

   10 type: BOOL ARRAY LBRACE INTLITERAL • RBRACE

    RBRACE  shift, and go to state 38


State 32

   12 type: BYTE ARRAY LBRACE INTLITERAL • RBRACE

    RBRACE  shift, and go to state 39


State 33

    8 type: INT ARRAY LBRACE INTLITERAL • RBRACE

    RBRACE  shift, and go to state 40


State 34

   17 formals: LPAREN formalsList RPAREN •

    $default  reduce using rule 17 (formals)


State 35

   19 formalsList: formalDecl COMMA • formalsList

    ID  shift, and go to state 4

    formalsList  go to state 41
    formalDecl   go to state 27
    id           go to state 28


State 36

   20 formalDecl: id COLON • type

    BOOL    shift, and go to state 11
    BYTE    shift, and go to state 12
    INT     shift, and go to state 13
    STRING  shift, and go to state 14
    VOID    shift, and go to state 15

    type  go to state 42


State 37

   21 fnBody: LCURLY stmtList • RCURLY
   22 stmtList: stmtList • stmt

    READ    shift, and go to state 43
    ID      shift, and go to state 4
    IF      shift, and go to state 44
    RCURLY  shift, and go to state 45
    RETURN  shift, and go to state 46
    WHILE   shift, and go to state 47
    WRITE   shift, and go to state 48

    varDecl    go to state 49
    fnDecl     go to state 50
    stmt       go to state 51
    assignExp  go to state 52
    fncall     go to state 53
    lval       go to state 54
    id         go to state 55


State 38

   10 type: BOOL ARRAY LBRACE INTLITERAL RBRACE •

    $default  reduce using rule 10 (type)


State 39

   12 type: BYTE ARRAY LBRACE INTLITERAL RBRACE •

    $default  reduce using rule 12 (type)


State 40

    8 type: INT ARRAY LBRACE INTLITERAL RBRACE •

    $default  reduce using rule 8 (type)


State 41

   19 formalsList: formalDecl COMMA formalsList •

    $default  reduce using rule 19 (formalsList)


State 42

   20 formalDecl: id COLON type •

    $default  reduce using rule 20 (formalDecl)


State 43

   28 stmt: READ • lval SEMICOLON

    ID  shift, and go to state 4

    lval  go to state 56
    id    go to state 57


State 44

   30 stmt: IF • LPAREN exp RPAREN LCURLY stmtList RCURLY
   31     | IF • LPAREN exp RPAREN LCURLY stmtList RCURLY ELSE LCURLY stmtList RCURLY

    LPAREN  shift, and go to state 58


State 45

   21 fnBody: LCURLY stmtList RCURLY •

    $default  reduce using rule 21 (fnBody)


State 46

   33 stmt: RETURN • exp SEMICOLON
   34     | RETURN • SEMICOLON

    DASH        shift, and go to state 59
    FALSE       shift, and go to state 60
    HAVOC       shift, and go to state 61
    ID          shift, and go to state 4
    INTLITERAL  shift, and go to state 62
    LPAREN      shift, and go to state 63
    NOT         shift, and go to state 64
    SEMICOLON   shift, and go to state 65
    STRLITERAL  shift, and go to state 66
    TRUE        shift, and go to state 67

    assignExp  go to state 68
    fncall     go to state 69
    exp        go to state 70
    term       go to state 71
    lval       go to state 72
    id         go to state 73


State 47

   32 stmt: WHILE • LPAREN exp RPAREN LCURLY stmtList RCURLY

    LPAREN  shift, and go to state 74


State 48

   29 stmt: WRITE • exp SEMICOLON

    DASH        shift, and go to state 59
    FALSE       shift, and go to state 60
    HAVOC       shift, and go to state 61
    ID          shift, and go to state 4
    INTLITERAL  shift, and go to state 62
    LPAREN      shift, and go to state 63
    NOT         shift, and go to state 64
    STRLITERAL  shift, and go to state 66
    TRUE        shift, and go to state 67

    assignExp  go to state 68
    fncall     go to state 69
    exp        go to state 75
    term       go to state 71
    lval       go to state 72
    id         go to state 73


State 49

   24 stmt: varDecl • SEMICOLON

    SEMICOLON  shift, and go to state 76


State 50

   36 stmt: fnDecl •

    $default  reduce using rule 36 (stmt)


State 51

   22 stmtList: stmtList stmt •

    $default  reduce using rule 22 (stmtList)


State 52

   25 stmt: assignExp • SEMICOLON

    SEMICOLON  shift, and go to state 77


State 53

   35 stmt: fncall • SEMICOLON

    SEMICOLON  shift, and go to state 78


State 54

   26 stmt: lval • DASHDASH SEMICOLON
   27     | lval • CROSSCROSS SEMICOLON
   37 assignExp: lval • ASSIGN exp

    ASSIGN      shift, and go to state 79
    CROSSCROSS  shift, and go to state 80
    DASHDASH    shift, and go to state 81


State 55

    6 varDecl: id • COLON type
   15 fnDecl: id • COLON type formals fnBody
   38 fncall: id • LPAREN RPAREN
   39       | id • LPAREN actualList RPAREN
   66 lval: id •
   67     | id • LBRACE exp RBRACE

    COLON   shift, and go to state 10
    LBRACE  shift, and go to state 82
    LPAREN  shift, and go to state 83

    $default  reduce using rule 66 (lval)


State 56

   28 stmt: READ lval • SEMICOLON

    SEMICOLON  shift, and go to state 84


State 57

   66 lval: id •
   67     | id • LBRACE exp RBRACE

    LBRACE  shift, and go to state 82

    $default  reduce using rule 66 (lval)


State 58

   30 stmt: IF LPAREN • exp RPAREN LCURLY stmtList RCURLY
   31     | IF LPAREN • exp RPAREN LCURLY stmtList RCURLY ELSE LCURLY stmtList RCURLY

    DASH        shift, and go to state 59
    FALSE       shift, and go to state 60
    HAVOC       shift, and go to state 61
    ID          shift, and go to state 4
    INTLITERAL  shift, and go to state 62
    LPAREN      shift, and go to state 63
    NOT         shift, and go to state 64
    STRLITERAL  shift, and go to state 66
    TRUE        shift, and go to state 67

    assignExp  go to state 68
    fncall     go to state 69
    exp        go to state 85
    term       go to state 71
    lval       go to state 72
    id         go to state 73


State 59

   56 exp: DASH • term

    FALSE       shift, and go to state 60
    HAVOC       shift, and go to state 61
    ID          shift, and go to state 4
    INTLITERAL  shift, and go to state 62
    LPAREN      shift, and go to state 63
    STRLITERAL  shift, and go to state 66
    TRUE        shift, and go to state 67

    fncall  go to state 69
    term    go to state 86
    lval    go to state 87
    id      go to state 73


State 60

   62 term: FALSE •

    $default  reduce using rule 62 (term)


State 61

   63 term: HAVOC •

    $default  reduce using rule 63 (term)


State 62

   59 term: INTLITERAL •

    $default  reduce using rule 59 (term)


State 63

   64 term: LPAREN • exp RPAREN

    DASH        shift, and go to state 59
    FALSE       shift, and go to state 60
    HAVOC       shift, and go to state 61
    ID          shift, and go to state 4
    INTLITERAL  shift, and go to state 62
    LPAREN      shift, and go to state 63
    NOT         shift, and go to state 64
    STRLITERAL  shift, and go to state 66
    TRUE        shift, and go to state 67

    assignExp  go to state 68
    fncall     go to state 69
    exp        go to state 88
    term       go to state 71
    lval       go to state 72
    id         go to state 73


State 64

   55 exp: NOT • exp

    DASH        shift, and go to state 59
    FALSE       shift, and go to state 60
    HAVOC       shift, and go to state 61
    ID          shift, and go to state 4
    INTLITERAL  shift, and go to state 62
    LPAREN      shift, and go to state 63
    NOT         shift, and go to state 64
    STRLITERAL  shift, and go to state 66
    TRUE        shift, and go to state 67

    assignExp  go to state 68
    fncall     go to state 69
    exp        go to state 89
    term       go to state 71
    lval       go to state 72
    id         go to state 73


State 65

   34 stmt: RETURN SEMICOLON •

    $default  reduce using rule 34 (stmt)


State 66

   60 term: STRLITERAL •

    $default  reduce using rule 60 (term)


State 67

   61 term: TRUE •

    $default  reduce using rule 61 (term)


State 68

   42 exp: assignExp •

    $default  reduce using rule 42 (exp)


State 69

   65 term: fncall •

    $default  reduce using rule 65 (term)


State 70

   33 stmt: RETURN exp • SEMICOLON
   43 exp: exp • DASH exp
   44    | exp • CROSS exp
   45    | exp • STAR exp
   46    | exp • SLASH exp
   47    | exp • AND exp
   48    | exp • OR exp
   49    | exp • EQUALS exp
   50    | exp • NOTEQUALS exp
   51    | exp • GREATER exp
   52    | exp • GREATEREQ exp
   53    | exp • LESS exp
   54    | exp • LESSEQ exp

    AND        shift, and go to state 90
    CROSS      shift, and go to state 91
    DASH       shift, and go to state 92
    EQUALS     shift, and go to state 93
    GREATER    shift, and go to state 94
    GREATEREQ  shift, and go to state 95
    LESS       shift, and go to state 96
    LESSEQ     shift, and go to state 97
    NOTEQUALS  shift, and go to state 98
    OR         shift, and go to state 99
    SEMICOLON  shift, and go to state 100
    SLASH      shift, and go to state 101
    STAR       shift, and go to state 102


State 71

   57 exp: term •

    $default  reduce using rule 57 (exp)


State 72

   37 assignExp: lval • ASSIGN exp
   58 term: lval •

    ASSIGN  shift, and go to state 79

    $default  reduce using rule 58 (term)


State 73

   38 fncall: id • LPAREN RPAREN
   39       | id • LPAREN actualList RPAREN
   66 lval: id •
   67     | id • LBRACE exp RBRACE

    LBRACE  shift, and go to state 82
    LPAREN  shift, and go to state 83

    $default  reduce using rule 66 (lval)


State 74

   32 stmt: WHILE LPAREN • exp RPAREN LCURLY stmtList RCURLY

    DASH        shift, and go to state 59
    FALSE       shift, and go to state 60
    HAVOC       shift, and go to state 61
    ID          shift, and go to state 4
    INTLITERAL  shift, and go to state 62
    LPAREN      shift, and go to state 63
    NOT         shift, and go to state 64
    STRLITERAL  shift, and go to state 66
    TRUE        shift, and go to state 67

    assignExp  go to state 68
    fncall     go to state 69
    exp        go to state 103
    term       go to state 71
    lval       go to state 72
    id         go to state 73


State 75

   29 stmt: WRITE exp • SEMICOLON
   43 exp: exp • DASH exp
   44    | exp • CROSS exp
   45    | exp • STAR exp
   46    | exp • SLASH exp
   47    | exp • AND exp
   48    | exp • OR exp
   49    | exp • EQUALS exp
   50    | exp • NOTEQUALS exp
   51    | exp • GREATER exp
   52    | exp • GREATEREQ exp
   53    | exp • LESS exp
   54    | exp • LESSEQ exp

    AND        shift, and go to state 90
    CROSS      shift, and go to state 91
    DASH       shift, and go to state 92
    EQUALS     shift, and go to state 93
    GREATER    shift, and go to state 94
    GREATEREQ  shift, and go to state 95
    LESS       shift, and go to state 96
    LESSEQ     shift, and go to state 97
    NOTEQUALS  shift, and go to state 98
    OR         shift, and go to state 99
    SEMICOLON  shift, and go to state 104
    SLASH      shift, and go to state 101
    STAR       shift, and go to state 102


State 76

   24 stmt: varDecl SEMICOLON •

    $default  reduce using rule 24 (stmt)


State 77

   25 stmt: assignExp SEMICOLON •

    $default  reduce using rule 25 (stmt)


State 78

   35 stmt: fncall SEMICOLON •

    $default  reduce using rule 35 (stmt)


State 79

   37 assignExp: lval ASSIGN • exp
